# lornock

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  dev.bat  run.bat  todo.md
assets/data/: example.timeline  simple.timeline  world.asset  world.game.example  world.save
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
data/font/: export.sh  quicksand_regular.fnt  renogare.fnt
data/mesh/: coal.blend  rock.blend  rock.blend1
data/saves/: simple.info  simple.timeline
data/shaders/: billboard.vert  color.frag  color.vert  default.frag  default.vert  depth.vert  particle.frag  particle.vert  rectangle.frag  rectangle.vert  sprite.frag  text.frag  text.vert
fbake/: fbake.cpp
src/: action.cpp  action.hpp  actions.cpp  assets.cpp  assets_fonts.cpp  assets_models.cpp  assets_shaders.cpp  assets_textures.cpp  asteroid.cpp  asteroid.hpp  config.hpp  draw.cpp  game.cpp  game.hpp  game_state.cpp  game_state.hpp  globals.cpp  hmm_wrapper.cpp  item.cpp  item.hpp  lornock.cpp  lornock_data.cpp  main.cpp  memory.cpp  memory.hpp  past_player.cpp  past_player.hpp  platform_common.hpp  player.cpp  player.hpp  sdl_linux.cpp  sdl_main.cpp  sdl_win32.cpp  serializer.cpp  serializer_types.cpp  state.h  state_types.cpp  states.cpp  test_state.cpp  ui.cpp
src/e/: camera.cpp  camera.hpp  collision.cpp  collision.hpp  component.cpp  component.hpp  core.cpp  core.hpp  csv.cpp  csv.hpp  entity.cpp  entity.hpp  group.cpp  group.hpp  info_asset.cpp  info_asset.hpp  input.cpp  input.hpp  math_util.cpp  math_util.hpp  point.cpp  point.hpp  rect.cpp  rect.hpp  renderer.cpp  renderer.hpp  resources.cpp  resources.hpp  scene.cpp  scene.hpp  sprite.cpp  sprite.hpp  spritesheet.cpp  spritesheet.hpp  string_util.cpp  string_util.hpp  text.cpp  text.hpp  tilelayer.cpp  tilelayer.hpp  (+4 more)
src/entities/: actions.cpp  particles.cpp  past_player.cpp  timeline.cpp
src/friendly/: math.cpp  string.cpp
